force-app/src/objects/TR1__Application_History__c.object
<CustomObject>
    <description>Used for Stages tracking in new ATS design.</description>
    <fields>
        <fullName>TR1__Application__c</fullName>
        <label>Application</label>
        <referenceTo>TR1__Application_V2__c</referenceTo>
        <relationshipLabel>Applications History</relationshipLabel>
        <relationshipName>Applications_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__AtsV1_Id__c</fullName>
        <inlineHelpText>If this record was created during a conversion from ATSv1 this field contains the id of the ATSv1 record it was converted from</inlineHelpText>
        <label>AtsV1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field of Contacts.</description>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications History</relationshipLabel>
        <relationshipName>Applications_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Days_in_Stage__c</fullName>
        <formula>if((TR1__Stage_End_Date__c - TR1__Stage_Start_Date__c=0),1,(TR1__Stage_End_Date__c - TR1__Stage_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <formula>TR1__Application__r.TR1__Job__r.Name</formula>
        <label>Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__NewStage__c</fullName>
        <label>New Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Internal Interview</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__OldStage__c</fullName>
        <label>Old Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Internal Interview</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Old_Stage__c</fullName>
        <label>Old Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Undo_rejection_Notes__c</fullName>
        <description>Capturing the history of rejection or undo rejection notes from Application</description>
        <label>Rejection/Undo rejection Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>New Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Application History</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>